# Web-Content-writer

./: .gitignore  Build instructions.md  check_backend.sh  frontend_instructions.md  package-lock.json  restart_backend.sh  setup_postgres.sh  start.sh  startup_log.txt
backend/: .env  .env.example  pyproject.toml  requirements.txt  sql_app.db
backend/app/: main.py
backend/app/api/dependencies/: auth.py
backend/app/api/v1/routes/: auth.py  billing.py  generations.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  generation.py  session.py  usage.py  user.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py  content_generation.py  image_analysis.py
